card, logout controller and models created. arrangements for other controller
